--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "0.1.0",
     "dependencies": {},
     "devDependencies": {
-        "@prettier/plugin-php": "^0.22.2",
-        "prettier": "^3.4.2"
+        "@prettier/plugin-php": "^0.22.3",
+        "prettier": "^3.4.2",
+        "prettier-plugin-sh": "^0.14.0"
     }
 }
