--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-SetEnvIf Request_URI "^/tiles/fonts/.*\.pbf$" exclude_pbf
+SetEnvIf Request_URI "/tiles/fonts/.*\.pbf$" exclude_pbf
 <FilesMatch "\.pbf$">
     Header set Content-Type "application/vnd.mapbox-vector-tile" env=!exclude_pbf
     Header set Content-Encoding "gzip" env=!exclude_pbf
