--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
     "singleQuote": true,
+    "overrides": [
+        {
+            "files": ["**/*.css", "**/*.scss"],
+            "options": {
+                "singleQuote": false
+            }
+        }
+    ],
     "tabWidth": 4,
     "printWidth": 120,
     "trailingComma": "none",
